<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/action_bar_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_write_post"
        android:icon="@drawable/ic_write_post"
        android:title="@string/write_post"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_edit_profile"
        android:title="@string/edit_my_profile"/>

    <item
        android:id="@+id/menu_item_view_users"
        android:title="@string/view_all_users"/>
    <item
        android:id="@+id/menu_item_sign_out"
        android:title="@string/sign_out"/>
</menu>